fixing some code
Signed-off-by: Frederic Descamps <lefred.descamps@gmail.com>